package org.csc133.a2;

public class Fixed extends GameObject{

    @Override
    public String toString()
    {
        return super.toString() + " ";
    }
}
