package org.csc133.a2;

import com.codename1.charts.util.ColorUtil;

public class FuelDisplay extends SevenSegDisplayComponent {

    public FuelDisplay()
    {
        super(4);
        setColor(ColorUtil.BLUE);

    }
}
