package org.csc133.a2;

public class GameSettings {

    //This class is created as a central hub for all settings so taht future change to the spec can
    //easily be modified here
    final public int screenConstraintX = 900;
    final public int screenConstraintY = 1328;
    final public int[] fuelBlimpCapacityRange = {5,10};
    final public int[] fuelBlimpSizeConstraint = {60,70};
    final public int[] birdSizeConstraint = {60,70};
    final public int hellicopterSize = 130;
    final public int skyScraperSize = 80;







}
