package org.csc133.a2;

import com.codename1.charts.util.ColorUtil;

public class HeadingDisplay extends SevenSegDisplayComponent {

    public HeadingDisplay()
    {
        super(3);
        setColor(ColorUtil.CYAN);

    }
}
