package org.csc133.a2;

import com.codename1.charts.util.ColorUtil;

public class LastSkyScraperDisplay extends SevenSegDisplayComponent {

    public LastSkyScraperDisplay()
    {
        super(1);
        setColor(ColorUtil.MAGENTA);

    }
}
