package org.csc133.a2;

import com.codename1.charts.util.ColorUtil;

public class LivesDisplay extends SevenSegDisplayComponent{

    public LivesDisplay()
    {
        super(1);
        setColor(ColorUtil.YELLOW);

    }
}
