@startuml

title __A2PRJ's Class Diagram__\n

  namespace org.csc133.a2 {
    class org.csc133.a2.AppMain {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.Bird {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.ButtonsPanel {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.ClockTest {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.DamageDisplay {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.Fixed {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.FuelDisplay {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.Game {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.GameClockComponent {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.GameObject {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.GameObjectCollection {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.GameSettings {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.GameWorld {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.GlassCockpit {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.HeadingDisplay {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.Hellicopter {
    }
  }
  

  namespace org.csc133.a2 {
    interface org.csc133.a2.IDrawable {
    }
  }
  

  namespace org.csc133.a2 {
    interface org.csc133.a2.IsSteerable {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.LastSkyScraperDisplay {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.LivesDisplay {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.Location {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.MapView {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.Movable {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.RefuelingBlimp {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.SevenSegDisplayComponent {
    }
  }
  

  namespace org.csc133.a2 {
    class org.csc133.a2.SkyScraper {
    }
  }
  

  org.csc133.a2.Bird -up-|> org.csc133.a2.Movable
  org.csc133.a2.ButtonsPanel -up-|> com.codename1.ui.Container
  org.csc133.a2.ClockTest -up-|> com.codename1.ui.Component
  org.csc133.a2.DamageDisplay -up-|> org.csc133.a2.SevenSegDisplayComponent
  org.csc133.a2.Fixed -up-|> org.csc133.a2.GameObject
  org.csc133.a2.FuelDisplay -up-|> org.csc133.a2.SevenSegDisplayComponent
  org.csc133.a2.Game .up.|> java.lang.Runnable
  org.csc133.a2.Game -up-|> com.codename1.ui.Form
  org.csc133.a2.Game o-- org.csc133.a2.GameWorld : gameWorld
  org.csc133.a2.Game o-- org.csc133.a2.GlassCockpit : glassCockpit
  org.csc133.a2.Game o-- org.csc133.a2.MapView : mapView
  org.csc133.a2.GameClockComponent -up-|> org.csc133.a2.SevenSegDisplayComponent
  org.csc133.a2.GameObject .up.|> org.csc133.a2.IDrawable
  org.csc133.a2.GameObject o-- org.csc133.a2.Location : location
  org.csc133.a2.GameWorld o-- org.csc133.a2.GameObjectCollection : collection
  org.csc133.a2.GameWorld o-- org.csc133.a2.GlassCockpit : glassCockpit
  org.csc133.a2.GameWorld o-- org.csc133.a2.MapView : mapView
  org.csc133.a2.GameWorld o-- org.csc133.a2.Location : startingLocation
  org.csc133.a2.GlassCockpit -up-|> com.codename1.ui.Container
  org.csc133.a2.GlassCockpit o-- org.csc133.a2.ClockTest : clockTest
  org.csc133.a2.GlassCockpit o-- org.csc133.a2.GameObjectCollection : collection
  org.csc133.a2.GlassCockpit o-- org.csc133.a2.DamageDisplay : damageDisplay
  org.csc133.a2.GlassCockpit o-- org.csc133.a2.FuelDisplay : fuelDisplay
  org.csc133.a2.GlassCockpit o-- org.csc133.a2.HeadingDisplay : headingDisplay
  org.csc133.a2.GlassCockpit o-- org.csc133.a2.LastSkyScraperDisplay : lastSkyScraperDisplay
  org.csc133.a2.GlassCockpit o-- org.csc133.a2.LivesDisplay : livesDisplay
  org.csc133.a2.GlassCockpit o-- org.csc133.a2.GameClockComponent : timer
  org.csc133.a2.HeadingDisplay -up-|> org.csc133.a2.SevenSegDisplayComponent
  org.csc133.a2.Hellicopter .up.|> org.csc133.a2.IsSteerable
  org.csc133.a2.Hellicopter -up-|> org.csc133.a2.Movable
  org.csc133.a2.LastSkyScraperDisplay -up-|> org.csc133.a2.SevenSegDisplayComponent
  org.csc133.a2.LivesDisplay -up-|> org.csc133.a2.SevenSegDisplayComponent
  org.csc133.a2.MapView -up-|> com.codename1.ui.Container
  org.csc133.a2.MapView o-- org.csc133.a2.GameObjectCollection : gameObjectCollection
  org.csc133.a2.Movable -up-|> org.csc133.a2.GameObject
  org.csc133.a2.RefuelingBlimp -up-|> org.csc133.a2.Fixed
  org.csc133.a2.SevenSegDisplayComponent -up-|> com.codename1.ui.Component
  org.csc133.a2.SkyScraper -up-|> org.csc133.a2.Fixed


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
